ports/stm32/err.log
modmachine.c: In function 'machine_init':
modmachine.c:76:25: error: 'RCC_CSR_BORRSTF' undeclared (first use in this function)
 #define RCC_SR_BORRSTF  RCC_CSR_BORRSTF
                         ^
modmachine.c:122:24: note: in expansion of macro 'RCC_SR_BORRSTF'
             || state & RCC_SR_BORRSTF
                        ^
modmachine.c:76:25: note: each undeclared identifier is reported only once for each function it appears in
 #define RCC_SR_BORRSTF  RCC_CSR_BORRSTF
                         ^
modmachine.c:122:24: note: in expansion of macro 'RCC_SR_BORRSTF'
             || state & RCC_SR_BORRSTF
                        ^
make: *** [build-STM32F3DISC/modmachine.o] Error 1
